--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO = "mongodb+srv://manish:manish@real-estate.8xojrkm.mongodb.net/"
+MONGO = mongodb+srv://manish:manish@cluster0.1uzei.mongodb.net/
 PORT = 4000
-JWT_SECRET = 'eioukckieklk9303392125'
+JWT_SECRET = eioukckieklk9303392125
